Adding examples to CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,8 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
           packages:
-            - g++-4.9
-            - libeigen3-dev
-      env: COMPILER=gcc GCC=4.9
-    - os: linux
-      addons:
-        apt:
-          sources:
-            - ubuntu-toolchain-r-test
-          packages:
             - g++-5
+            - python3
             - libeigen3-dev
       env: COMPILER=gcc GCC=5
     - os: linux
@@ -29,14 +21,28 @@ matrix:
             - ubuntu-toolchain-r-test
           packages:
             - g++-6
+            - python3
             - libeigen3-dev
       env: COMPILER=gcc GCC=6
+    - os: linux
+      addons:
+        apt:
+          sources:
+            - ubuntu-toolchain-r-test
+          packages:
+            - g++-7
+            - python3
+            - libeigen3-dev
+      env: COMPILER=gcc GCC=7
 env:
   global:
     - MINCONDA_VERSION="latest"
     - MINCONDA_LINUX="Linux-x86_64"
     - MINCONDA_OSX="MacOSX-x86_64"
 before_install:
+    - sudo apt-get -qq update
+    - sudo apt-get install -y texlive-base texlive-latex-base texlive-latex-extra texlive-fonts-recommended texlive-fonts-extra
+    - sudo apt-get install dvipng
     - |
       # Configure build variables
       if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
@@ -67,10 +73,19 @@ install:
     - conda install xtl -c conda-forge
     - conda install xsimd -c conda-forge
     - conda install xtensor -c conda-forge
+    - pip install numpy matplotlib GooseMPL pybind11 pyxtensor
+    - export MPLBACKEND=Agg
+    - python -c "import GooseMPL; GooseMPL.copy_style()"
     # store relevant
+    - root_dir="${PWD}"
     - build_dir="${PWD}/build"
-    - example_dir="${PWD}/docs/examples"
+    # make Python library
+    - cd "${root_dir}"
+    - python3 setup.py build
+    - python3 setup.py install
     # build path
+    - cd "${root_dir}"
+    - rm -r "${build_dir}"
     - mkdir "${build_dir}"
     - cd "${build_dir}"
     # install catch
@@ -79,14 +94,21 @@ install:
     - mkdir build
     - cd build
     - mkdir opt
-    - cmake .. -DCATCH_BUILD_TESTING=OFF -DCMAKE_INSTALL_PREFIX:PATH="${PWD}"/opt
-    - make install
-    - export INCLUDE_PATH="${PWD}"/opt/include:"${INCLUDE_PATH}"
+    - cmake .. -DCATCH_BUILD_TESTING=OFF
+    - sudo make install
     # make test-cases
     - cd "${build_dir}"
-    - cmake .. -DBUILD_TESTS=ON
+    - cmake .. -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON
     - make
 script:
     # run tests
     - cd "${build_dir}/test"
     - ./test
+    # run examples
+    - cd "${build_dir}/docs/examples"
+    - ./statics_FixedDisplacements_LinearElastic_example
+    - python3 statics_FixedDisplacements_LinearElastic_plot.py
+    - python3 statics_FixedDisplacements_LinearElastic_example.py
+    - ./statics_FixedDisplacements_LinearElastic_manual_partition
+    - python3 statics_FixedDisplacements_LinearElastic_plot.py
+    - python3 statics_FixedDisplacements_LinearElastic_manual_partition.py
