--- a/.travis.yml
+++ b/.travis.yml
@@ -80,7 +80,8 @@ install:
     - mkdir "${build_dir}"
     - mkdir "${lib_dir}"
     # install Eigen
-    - rm -r "${lib_dir}"/*
+    - rm -r "${lib_dir}"
+    - mkdir "${lib_dir}"
     - cd "${lib_dir}"
     - git clone https://github.com/eigenteam/eigen-git-mirror.git
     - cd eigen-git-mirror
@@ -89,7 +90,8 @@ install:
     - cmake .. -DBUILD_TESTING=OFF
     - sudo make install
     # install HighFive
-    - rm -r "${lib_dir}"/*
+    - rm -r "${lib_dir}"
+    - mkdir "${lib_dir}"
     - cd "${lib_dir}"
     - git clone https://github.com/BlueBrain/HighFive.git
     - cd HighFive
@@ -98,7 +100,8 @@ install:
     - cmake .. -DHIGHFIVE_EXAMPLES=OFF -DUSE_BOOST=OFF
     - sudo make install
     # install Catch2
-    - rm -r "${lib_dir}"/*
+    - rm -r "${lib_dir}"
+    - mkdir "${lib_dir}"
     - cd "${lib_dir}"
     - git clone https://github.com/catchorg/Catch2.git
     - cd Catch2
@@ -107,7 +110,8 @@ install:
     - cmake .. -DCATCH_BUILD_TESTING=OFF
     - sudo make install
     # install GMatElastic
-    - rm -r "${lib_dir}"/*
+    - rm -r "${lib_dir}"
+    - mkdir "${lib_dir}"
     - cd "${lib_dir}"
     - git clone https://github.com/tdegeus/GMatElastic.git
     - cd GMatElastic
@@ -123,6 +127,8 @@ install:
     - python3 setup.py build
     - python3 setup.py install
     # make test-cases and examples
+    - rm -r "${build_dir}"
+    - mkdir "${build_dir}"
     - cd "${build_dir}"
     - cmake .. -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON
     - make
