--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,59 +1,29 @@
 
-cmake_minimum_required(VERSION 2.8.12)
+cmake_minimum_required(VERSION 3.0)
 
-project(test)
+if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
+    project(GooseFEM-test)
+    find_package(GooseFEM REQUIRED CONFIG)
+endif()
 
 option(WARNINGS "Show build warnings" ON)
+option(SIMD "Enable xsimd" ON)
+option(DEBUG "Enable all assertions" ON)
 
-# basic compiler options
-# ----------------------
+find_package(Catch2 REQUIRED)
 
-# set optimization level
-set(CMAKE_BUILD_TYPE Release)
+add_executable(main main.cpp)
 
-# set C++ standard
-set(CMAKE_CXX_STANDARD 14)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+target_link_libraries(main PRIVATE Catch2::Catch2 GooseFEM)
 
-# switch on warnings
-if(WARNINGS)
-  if(MSVC)
-    if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
-      string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
-    else()
-      set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
-    endif()
-  else()
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -Wno-unknown-pragmas")
-  endif()
+if (SIMD)
+    target_link_libraries(main PRIVATE xtensor::optimize xtensor::use_xsimd)
 endif()
 
-# load packages
-# -------------
-
-# add custom paths
-if(NOT "$ENV{INCLUDE_PATH}" STREQUAL "")
-  string(REPLACE ":" ";" INCLUDE_LIST "$ENV{INCLUDE_PATH}")
-  include_directories(SYSTEM ${INCLUDE_LIST})
+if (WARNINGS)
+    target_link_libraries(main PRIVATE GooseFEM::compiler_warnings)
 endif()
 
-# load pkg-config
-find_package(PkgConfig)
-
-# eigen3
-pkg_check_modules(EIGEN3 REQUIRED eigen3)
-include_directories(SYSTEM ${EIGEN3_INCLUDE_DIRS})
-
-# compile
-# -------
-
-add_executable(${PROJECT_NAME}
-  main.cpp
-  Vector.cpp
-  VectorPartitioned.cpp
-  MatrixDiagonal.cpp
-  ElementQuad4.cpp
-  ElementHex8.cpp
-  Iterate.cpp
-  MeshQuad4.cpp
-)
+if (DEBUG)
+    target_link_libraries(main PRIVATE GooseFEM::debug)
+endif()
