--- a/.travis.yml
+++ b/.travis.yml
@@ -80,6 +80,7 @@ install:
     - conda install catch2 -c conda-forge
     - conda install eigen -c conda-forge
     - conda install gmatelastic -c conda-forge
+    - conda install python-gmatelastic -c conda-forge
     - conda install highfive -c conda-forge
     # Build/install the library
     - cmake . -DBUILD_TESTS=ON -DBUILD_EXAMPLES=ON
@@ -89,7 +90,7 @@ install:
     - python setup.py install
 script:
     # run tests
-    - ./test/test
+    - ./test/main
     # run examples
     - ./docs/examples/statics_FixedDisplacements_LinearElastic_example
     - python docs/examples/statics_FixedDisplacements_LinearElastic_example.py --no-plot
